# simple-opengl-window

./: CMakeLists.txt  README.md
src/: main.cpp
src/window/: window.cpp  window.h
